fix mistakes in Login & Registration page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </a>
               </li>
               <li class="user__list-item">
-                <a class="user__list-link" href="#">
+                <a class="user__list-link" href="forms.html">
                   <img src="images/person.svg" alt="person">
                 </a>
               </li>
