add 2 more css animation

--- a/forms.html
+++ b/forms.html
@@ -204,7 +204,7 @@
                                 Зарегистрироваться
                             </button>
                         </div>
-                        <img src="images/log.svg" class="image" alt="" />
+                        <img src="images/log.svg" class="image image-log" alt="" />
                     </div>
                     <div class="panel right-panel">
                         <div class="content">
@@ -216,7 +216,7 @@
                                 Войти
                             </button>
                         </div>
-                        <img src="images/register.svg" class="image" alt="" />
+                        <img src="images/register.svg" class="image image-register" alt="" />
                     </div>
                 </div>
         </div>
