Validation form Regualr Expression + fix small mistakes

--- a/catalog.html
+++ b/catalog.html
@@ -73,13 +73,13 @@
     </div>
     <ul class="menu-mobile__list">
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="catalog.html">
+        <a class="menu-mobile__link" href="forms.html">
           <img class="menu-mobile__img" src="images/person.svg" alt="icon">
           <p>Войти</p>
         </a>
       </li>
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="#">
+        <a class="menu-mobile__link" href="forms.html">
           <img class="menu-mobile__img" src="images/person.svg" alt="icon">
           <p>Регистрация</p>
         </a>
@@ -103,15 +103,15 @@
         </a>
       </li>
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="#">
-          <img class="menu-mobile__img" src="images/procent.svg" alt="icon">
-          <p>Акции</p>
+        <a class="menu-mobile__link" href="payment.html">
+          <img class="menu-mobile__img" src="images/box.svg" alt="icon">
+          <p>Доставка и оплата</p>
         </a>
       </li>
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="#">
+        <a class="menu-mobile__link" href="contact.html">
           <img class="menu-mobile__img" src="images/box.svg" alt="icon">
-          <p>Доставка и оплата</p>
+          <p>Контакты</p>
         </a>
       </li>
       <li class="menu-mobile__item">
@@ -558,9 +558,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_1.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO RXT- X RS AUDIO 300 3-МЕСТ.ФИОЛЕТОВЫЙ</h4>
+              <p class="price product-item-price">11 585 800 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -579,9 +579,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_2.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO RXP- X RS AUDIO 300 2-МЕСТ.ФИОЛЕТОВЫЙ</h4>
+              <p class="price product-item-price">12 783 600 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -600,9 +600,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_3.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO GTX LTD 300 3-МЕСТ. СЕРЫЙ МЕТАЛЛИК 2021</h4>
+              <p class="price product-item-price">11 967 400 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -621,9 +621,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_4.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO FISH PRO STD 170 3-МЕСТ.ГОЛУБОЙ 2021</h4>
+              <p class="price product-item-price">9 942 800 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -642,9 +642,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_5.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO GTX STD AUDIO 230 3-МЕСТ.ОРАНЖЕВЫЙ 2021</h4>
+              <p class="price product-item-price">9 942 800 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -663,9 +663,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_6.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO GTR STD 230 3-МЕСТ. ЧЕРНО-ЖЕЛТЫЙ 2021</h4>
+              <p class="price product-item-price">8 580 700 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -684,9 +684,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_7.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO GTI STD 130 3-МЕСТ. ЧЕРНО-БЕЛЫЙ С БИРЮЗОВЫМ 2021</h4>
+              <p class="price product-item-price">6 614 400 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -705,9 +705,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_8.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO SPARK TRIXX IBR 90 3-МЕСТ. ЧЕРНО-КРАСНЫЙ 2021</h4>
+              <p class="price product-item-price">5 734 600 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -726,9 +726,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_9.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO SPARK TRIXX IBR 90 2-МЕСТ. ЧЕРНО-ЗЕЛЕНЫЙ 2021</h4>
+              <p class="price product-item-price">5 353 000 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -747,9 +747,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_10.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO SPARK TRIXX IBR 90 2-МЕСТ. КРАСНЫЙ 2021</h4>
+              <p class="price product-item-price">5 353 000 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -768,9 +768,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_11.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO RXT- X RS 300 3-МЕСТ. ЧЕРНО-ЖЕЛТЫЙ 2021</h4>
+              <p class="price product-item-price">11 251 900 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -789,9 +789,9 @@
               <p class="product-item__hover-text">
                 посмотреть товар
               </p>
-              <img class="product-item__img" src="images/content/gidrotsikl-1.png" alt="gidrotsikl">
-              <h4 class="product-item__title">Гидроцикл BRP SeaDoo GTI 130hp SE Black\Mango</h4>
-              <p class="price product-item-price">5 049 500 ₸</p>
+              <img class="product-item__img" src="images/gidrocikle_12.jpg" alt="gidrotsikl">
+              <h4 class="product-item__title">ГИДРОЦИКЛ SEA-DOO GTX STD 170 3-МЕСТ. СЕРО-СИНИЙ 2021</h4>
+              <p class="price product-item-price">8 416 400 ₸</p>
               <p class="product-item__notify-text">
                 нет в наличии
               </p>
@@ -811,6 +811,7 @@
           </div>
 
         </div>
+
       </div>
     </div>
   </section>
