--- a/contact.html
+++ b/contact.html
@@ -74,13 +74,13 @@
         </div>
         <ul class="menu-mobile__list">
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="catalog.html">
+                <a class="menu-mobile__link" href="forms.html">
                     <img class="menu-mobile__img" src="images/person.svg" alt="icon">
                     <p>Войти</p>
                 </a>
             </li>
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="#">
+                <a class="menu-mobile__link" href="forms.html">
                     <img class="menu-mobile__img" src="images/person.svg" alt="icon">
                     <p>Регистрация</p>
                 </a>
@@ -104,15 +104,15 @@
                 </a>
             </li>
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="#">
-                    <img class="menu-mobile__img" src="images/procent.svg" alt="icon">
-                    <p>Акции</p>
+                <a class="menu-mobile__link" href="payment.html">
+                    <img class="menu-mobile__img" src="images/box.svg" alt="icon">
+                    <p>Доставка и оплата</p>
                 </a>
             </li>
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="#">
+                <a class="menu-mobile__link" href="contact.html">
                     <img class="menu-mobile__img" src="images/box.svg" alt="icon">
-                    <p>Доставка и оплата</p>
+                    <p>Контакты</p>
                 </a>
             </li>
             <li class="menu-mobile__item">
@@ -284,12 +284,23 @@
                     </div>
                     <div class="contact__info">
                         <h3 class="contact__title">ВРЕМЯ РАБОТЫ:</h3>
-                        <p class="contact__text">Каждый день   с 10:00 до 21:00</p>
+                        <p class="contact__text">Каждый день с 10:00 до 21:00</p>
                     </div>
                 </div>
             </div>
             <div class="contact__map">
-                <a class="dg-widget-link" href="http://2gis.kz/almaty/firm/9429940000793107/center/76.91015481948854,43.23548766855137/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте Алматы</a><div class="dg-widget-link"><a href="http://2gis.kz/almaty/firm/9429940000793107/photos/9429940000793107/center/76.91015481948854,43.23548766855137/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=photos">Фотографии компании</a></div><div class="dg-widget-link"><a href="http://2gis.kz/almaty/center/76.909876,43.235296/zoom/17/routeTab/rsType/bus/to/76.909876,43.235296╎Международный университет информационных технологий?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти проезд до Международный университет информационных технологий</a></div><script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script><script charset="utf-8">new DGWidgetLoader({"width":1185,"height":600,"borderColor":"#a3a3a3","pos":{"lat":43.23548766855137,"lon":76.91015481948854,"zoom":17},"opt":{"city":"almaty"},"org":[{"id":"9429940000793107"}]});</script>
+                <a class="dg-widget-link"
+                    href="http://2gis.kz/almaty/firm/9429940000793107/center/76.91015481948854,43.23548766855137/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть
+                    на карте Алматы</a>
+                <div class="dg-widget-link"><a
+                        href="http://2gis.kz/almaty/firm/9429940000793107/photos/9429940000793107/center/76.91015481948854,43.23548766855137/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=photos">Фотографии
+                        компании</a></div>
+                <div class="dg-widget-link"><a
+                        href="http://2gis.kz/almaty/center/76.909876,43.235296/zoom/17/routeTab/rsType/bus/to/76.909876,43.235296╎Международный университет информационных технологий?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти
+                        проезд до Международный университет информационных технологий</a></div>
+                <script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script>
+                <script
+                    charset="utf-8">new DGWidgetLoader({ "width": 1185, "height": 600, "borderColor": "#a3a3a3", "pos": { "lat": 43.23548766855137, "lon": 76.91015481948854, "zoom": 17 }, "opt": { "city": "almaty" }, "org": [{ "id": "9429940000793107" }] });</script>
             </div>
         </div>
     </section>
