--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     </div>
     <ul class="menu-mobile__list">
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="catalog.html">
+        <a class="menu-mobile__link" href="forms.html">
           <img class="menu-mobile__img" src="images/person.svg" alt="icon">
           <p>Войти</p>
         </a>
       </li>
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="#">
+        <a class="menu-mobile__link" href="forms.html">
           <img class="menu-mobile__img" src="images/person.svg" alt="icon">
           <p>Регистрация</p>
         </a>
@@ -103,15 +103,15 @@
         </a>
       </li>
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="#">
-          <img class="menu-mobile__img" src="images/procent.svg" alt="icon">
-          <p>Акции</p>
+        <a class="menu-mobile__link" href="payment.html">
+          <img class="menu-mobile__img" src="images/box.svg" alt="icon">
+          <p>Доставка и оплата</p>
         </a>
       </li>
       <li class="menu-mobile__item">
-        <a class="menu-mobile__link" href="#">
+        <a class="menu-mobile__link" href="contact.html">
           <img class="menu-mobile__img" src="images/box.svg" alt="icon">
-          <p>Доставка и оплата</p>
+          <p>Контакты</p>
         </a>
       </li>
       <li class="menu-mobile__item">
