--- a/payment.html
+++ b/payment.html
@@ -73,13 +73,13 @@
         </div>
         <ul class="menu-mobile__list">
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="catalog.html">
+                <a class="menu-mobile__link" href="forms.html">
                     <img class="menu-mobile__img" src="images/person.svg" alt="icon">
                     <p>Войти</p>
                 </a>
             </li>
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="#">
+                <a class="menu-mobile__link" href="forms.html">
                     <img class="menu-mobile__img" src="images/person.svg" alt="icon">
                     <p>Регистрация</p>
                 </a>
@@ -103,15 +103,15 @@
                 </a>
             </li>
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="#">
-                    <img class="menu-mobile__img" src="images/procent.svg" alt="icon">
-                    <p>Акции</p>
+                <a class="menu-mobile__link" href="payment.html">
+                    <img class="menu-mobile__img" src="images/box.svg" alt="icon">
+                    <p>Доставка и оплата</p>
                 </a>
             </li>
             <li class="menu-mobile__item">
-                <a class="menu-mobile__link" href="#">
+                <a class="menu-mobile__link" href="contact.html">
                     <img class="menu-mobile__img" src="images/box.svg" alt="icon">
-                    <p>Доставка и оплата</p>
+                    <p>Контакты</p>
                 </a>
             </li>
             <li class="menu-mobile__item">
@@ -263,14 +263,18 @@
                 <ul class="payment__shipping">
                     <li class="payment__shipping-item">по г. Алматы и по Казахстану от 1000 ₸.</li>
                     <li class="payment__shipping-item">Стоимость доставки зависит от объема и веса заказа.</li>
-                    <li class="payment__shipping-item">Для расчета точной стоимости доставки Вам необходимо связаться с нашим оператором по телефону <a href="tel:87477484605">+7 747 748 46 05</a></li>
+                    <li class="payment__shipping-item">Для расчета точной стоимости доставки Вам необходимо связаться с
+                        нашим оператором по телефону <a href="tel:87477484605">+7 747 748 46 05</a></li>
                 </ul>
                 <h3 class="payment__title">Способ оплаты заказа:</h3>
                 <ul class="payment__shipping">
-                    <li class="payment__shipping-item">Оплата наличными может осуществлятся курьеру при доставке товара, или:</li>
-                    <li class="payment__shipping-item">Наличными или банковсой картой в магазине Homeart, по адресу:</li>
+                    <li class="payment__shipping-item">Оплата наличными может осуществлятся курьеру при доставке товара,
+                        или:</li>
+                    <li class="payment__shipping-item">Наличными или банковсой картой в магазине Homeart, по адресу:
+                    </li>
                     <ul class="payment__shipping-inner">
-                        <li class="payment__shipping-item">г. Алматы, ул. Абая 68/74. тел.: <a href="tel:87477484605">+7 747 748 46 05</a></li>
+                        <li class="payment__shipping-item">г. Алматы, ул. Абая 68/74. тел.: <a href="tel:87477484605">+7
+                                747 748 46 05</a></li>
                     </ul>
                     <li class="payment__shipping-item">Оплата KaspiRed в магазине или Kaspi QR на доставку</li>
                     <li class="payment__shipping-item">Оплата безналичным расчетом</li>
