--- a/forms.html
+++ b/forms.html
@@ -168,21 +168,21 @@
                         <h2 class="title">Авторизация</h2>
                         <div class="input-field">
                             <i class="fas fa-user"></i>
-                            <input type="text" placeholder="Логин" pattern="^(?=.*[A-Za-z0-9]$)[A-Za-z][A-Za-z\d.-]{0,19}" required/>
+                            <input id="userName" type="text" placeholder="Логин" pattern="^(?=.*[A-Za-z0-9]$)[A-Za-z][A-Za-z\d.-]{0,19}" required />
                             <span class="form__error">Это поле должно содержать только латинские буквы и цифры</span>
                         </div>
                         <div class="input-field">
                             <i class="fas fa-lock"></i>
-                            <input type="password" placeholder="Пароль" pattern="(?!^[0-9]*$)(?!^[a-zA-Z]*$)^([a-zA-Z0-9]{8,15})$" required/>
-                            <span class="form__error">Первая бувка заглваная, длина пароля от 8 до 15. Латинские бувы и цифры</span>
+                            <input id="userPw" type="password" placeholder="Пароль" pattern="(?!^[0-9]*$)(?!^[a-zA-Z]*$)^([a-zA-Z0-9]{8,15})$" required/>
+                            <span class="form__error">Латинские бувы и цифры, длина пароля от 8 до 15</span>
                         </div>
-                        <button class="btn solid" type="submit">Войти</button>
+                        <button class="btn solid" type="submit" onClick="check()">Войти</button>
                     </form>
                     <form action="#" class="sign-up-form">
                         <h2 class="title">Регистрация</h2>
                         <div class="input-field">
                             <i class="fas fa-user"></i>
-                            <input type="text" placeholder="Логин" pattern="^(?=.*[A-Za-z0-9]$)[A-Za-z][A-Za-z\d.-]{0,19}"/ required>
+                            <input id="name" type="text" placeholder="Логин" pattern="^(?=.*[A-Za-z0-9]$)[A-Za-z][A-Za-z\d.-]{0,19}"/ required>
                             <span class="form__error">Это поле должно содержать только латинские буквы и цифры</span>
                         </div>
                         <div class="input-field">
@@ -192,10 +192,10 @@
                         </div>
                         <div class="input-field">
                             <i class="fas fa-lock"></i>
-                            <input type="password" placeholder="Пароль" pattern="(?!^[0-9]*$)(?!^[a-zA-Z]*$)^([a-zA-Z0-9]{8,15})$" required/>
-                            <span class="form__error">Первая бувка заглваная, длина пароля от 8 до 15. Латинские бувы и цифры</span>
+                            <input id="pw" type="password" placeholder="Пароль" pattern="(?!^[0-9]*$)(?!^[a-zA-Z]*$)^([a-zA-Z0-9]{8,15})$" required/>
+                            <span class="form__error">Латинские бувы и цифры, длина пароля от 8 до 15</span>
                         </div>
-                        <button type="submit" class="btn">Зарегистрироваться</button>
+                        <button type="submit" class="btn" onClick="store()">Зарегистрироваться</button>
                     </form>
                 </div>
             </div>
